[package]
name = "deno_native_certs"
description = "deno-native-certs loads native certificate store into rustls"
version = "0.3.1"
edition = "2021"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "MIT"
repository = "https://github.com/denoland/deno_native_certs"

[[bin]]
name = "deno_native_certs_test"
path = "test_bin.rs"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rustls-native-certs = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
once_cell = "1.19.0"
dlopen2 = "0.7.0"
dlopen2_derive = "0.4.0"
rustls-pemfile = "2"

[target.'cfg(target_os = "macos")'.dev-dependencies]
rustls-native-certs = "0.7"
